Fix tags alignment

--- a/src/scss/components/_tag.scss
+++ b/src/scss/components/_tag.scss
@@ -6,7 +6,6 @@
   background-color: white;
   padding: 3px 8px;
   border: 0.5px solid #c4c4c4;
-  margin: 3px 5px 3px 0;
   color: $color-primary;
   font-weight: 500;
 
