--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -26,6 +26,11 @@ header {
     flex-wrap: wrap;
     margin: 30px 0;
 
+    li {
+      display: flex;
+      margin: 0 8px 8px 0;
+    }
+
     @include screen-above(tablet) {
       order: 2;
       flex: initial;
